Normally it should build now but it dosen't

--- a/meson.build
+++ b/meson.build
@@ -16,5 +16,21 @@ add_project_arguments([
   '-I' + meson.project_build_root(),
 ], language: 'c')
 
+pymod = import('python')
+
+py3 = pymod.find_installation('python3', required: true)
+py3.dependency('sys')
+py3.dependency('Pillow')
+py3.dependency('os')
+
+script = configure_file('tools/imgconv_dir_term.py')
+
+custom_target(
+  command: [py3, script, 'img/', 'img_conv/']
+)
+custom_target(
+  command: [py3, script, 'img/cars/skin1/', 'img_conv/']
+)
+
 subdir('lib')
 subdir('src')
