Better README, started making a SDL version of canvas.h and audio.h, better meson.build

--- a/lib/meson.build
+++ b/lib/meson.build
@@ -6,7 +6,7 @@ canvaslib_sources = [
 
 if target_machine.system() != 'wasm'
   canvaslib_deps = [
-    dependency('sdl2', native: true),
+    dependency('sdl', native: true),
   ]
 else
   canvaslib_deps = []
