Restructured a big part of the game.
- Moved a lot of variable into .c files
- Made the game easier to adapt, to add other game modes soon
- Made the collision management easier to modify to make it possible to have new tiles in the world 4 (a river etc.)
- Ported the SDL version of canvaslib to the SDL2.
- Improved the SDL2 port because I'm using it a lot for testing: the graphics are now scaled.

Maybe I forgot some things ... But normally it should be everything I did.

--- a/img/meson.build
+++ b/img/meson.build
@@ -23,11 +23,16 @@ prog_python = pymod.find_installation('python3',
   ],
 )
 
+calcrace_sources = []
+
 foreach image : assets_sources
-  custom_target(
-    output: '@BASENAME@.h',
+  calcrace_sources += custom_target(
+    output: '@BASENAME@.c',
     input: image,
-    command: [prog_python, '../tools/imgconv.py', '@INPUT@', '@OUTPUT@'],
+    command: [prog_python, img_converter,
+      '@INPUT@',
+      meson.current_build_dir()+'/@BASENAME@.h',
+      '@OUTPUT@'],
     build_by_default: true
   )
 endforeach
